--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -3,7 +3,7 @@
 /* Styles */
 /* --------------------------------------- */
 html, body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   padding: 0px;
   margin: 0px;
   width: 100%;
@@ -32,7 +32,8 @@ footer {
 .tomboticon {
   position: relative;
   margin: 0 auto;
-  margin-top: 7%;
+  margin-top: 3%;
+  margin-bottom: 3%;
   width: 200px;
   height: 200px;
 }
@@ -44,21 +45,63 @@ footer {
   left: 25px;
 }
 
-.tombot-question {
-  font-size: 40px;
-  padding: 30px 20px;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white;
-  margin-top: 2%;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-.tombot-question.bot {
-  color: #ff8900;
-}
-
 .main_container {
   margin: 0 auto;
-  width: 70%;
+  width: 60%;
+}
+
+.conversation input {
+  padding: 30px 20px;
+  font-size: 40px;
+  font-weight: 300;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.conversation label {
+  font-size: 25px;
+}
+.conversation.question label {
+  float: left;
+}
+.conversation.question input {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ff8900;
+}
+.conversation.answer label {
+  float: right;
+  color: white;
+}
+.conversation.answer input {
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  text-align: right;
+  cursor: default;
+}
+
+.info {
+  display: none;
+}
+.info.speechbubble {
+  position: relative;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  background: white;
+  padding: 30px;
+  font-size: 25px;
+  color: #404040;
+}
+.info.speechbubble:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: 23px solid transparent;
+  border-bottom-color: #ffffff;
+  border-top: 0;
+  margin-left: -23px;
+  margin-top: -23px;
 }
 
 /* --------------------------------------- */
