--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -4,9 +4,11 @@
 @import "compass/css3";
 @import "compass/utilities";
 
-$primary_font: 'Open Sans', sans-serif;
+$primary_font: 'Open Sans Condensed', sans-serif;
 
 $primary-color: #ff8900;
+$secondary-color: #77C0B2;
+$dark-color: #404040;
 
 
 /* --------------------------------------- */
@@ -42,7 +44,8 @@ footer{
 .tomboticon {
   position:relative;
   margin:0 auto;
-  margin-top:7%;
+  margin-top:3%;
+  margin-bottom:3%;
   //background: green;
   width:200px;
   height:200px;
@@ -57,31 +60,98 @@ footer{
   }
 }
 
-.tombot-question {
 
-  font-size:40px;
-  padding:30px 20px;
-  background-color: rgba(255, 255, 255, 0.1);
-  color:white;
-  margin-top:2%;
-  border:1px solid rgba(255, 255, 255, 0.1);
-
-  &.bot{
-    color:$primary-color;
-  }
-
-}
 
 
 .main_container {
   
   margin:0 auto;
-  width: 70%;
+  width: 60%;
   //background:red;
 
 }
 
 
+
+.conversation {
+  
+  input {
+    padding:30px 20px;
+    font-size:40px;
+    font-weight:300;
+    border:1px solid rgba(255, 255, 255, 0.1);
+  }
+
+  label {
+    font-size:25px;
+  }
+
+  &.question {
+
+    label {
+      float:left;
+    }
+
+    input {
+      background-color: rgba(255, 255, 255, 0.1);
+      color:$primary-color;
+    }
+
+  }
+
+  &.answer {
+
+    label {
+      float:right;
+      color:white;
+    }
+
+    input {
+      background-color: rgba(255, 255, 255, 0);
+      color:white;
+      text-align:right;
+      cursor:default;
+    }
+
+  }
+
+}
+
+
+
+
+
+
+.info {
+
+  display:none;
+
+  &.speechbubble {
+    position:relative;
+    @include border-radius(25px);
+    background:white;
+    padding:30px;
+    font-size:25px;
+    color: $dark-color;
+  }
+
+  &.speechbubble:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 23px solid transparent;
+    border-bottom-color: #ffffff;
+    border-top: 0;
+    margin-left: -23px;
+    margin-top: -23px;
+  }
+  
+
+
+}
 
 
 
