--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -27,13 +27,14 @@ footer {
   width: 100%;
   height: auto;
   padding: 0px 10px 10px 10px;
+  z-index: -999;
 }
 
 .tomboticon {
   position: relative;
   margin: 0 auto;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 1%;
+  margin-bottom: 1%;
   width: 200px;
   height: 200px;
 }
@@ -77,10 +78,10 @@ footer {
   cursor: default;
 }
 
-.info {
+.content-info {
   display: none;
 }
-.info.speechbubble {
+.content-info.speechbubble {
   position: relative;
   -moz-border-radius: 25px;
   -webkit-border-radius: 25px;
@@ -90,7 +91,7 @@ footer {
   font-size: 25px;
   color: #404040;
 }
-.info.speechbubble:after {
+.content-info.speechbubble:after {
   content: '';
   position: absolute;
   top: 0;
@@ -102,6 +103,32 @@ footer {
   border-top: 0;
   margin-left: -23px;
   margin-top: -23px;
+}
+
+/* --------------------------------------- */
+/* Intro Slides */
+/* --------------------------------------- */
+.margin-top-0 {
+  margin-top: 0px;
+}
+
+.intro-slide {
+  z-index: 999;
+}
+.intro-slide h2 {
+  font-family: "Open Sans Condensed", sans-serif;
+  color: #ff8900;
+  font-weight: 600;
+  font-size: 30px;
+}
+.intro-slide .question {
+  font-weight: 600;
+  font-size: 30px;
+}
+.intro-slide .btn {
+  font-size: 30px;
+  margin-top: -15px;
+  margin-bottom: 5px;
 }
 
 /* --------------------------------------- */
