--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -38,14 +38,15 @@ footer{
    height:auto;  
    //background:#6cf;
    padding:0px 10px 10px 10px;
+   z-index:-999;
 }
 
 
 .tomboticon {
   position:relative;
   margin:0 auto;
-  margin-top:3%;
-  margin-bottom:3%;
+  margin-top:1%;
+  margin-bottom:1%;
   //background: green;
   width:200px;
   height:200px;
@@ -122,14 +123,14 @@ footer{
 
 
 
-.info {
+.content-info {
 
   display:none;
 
   &.speechbubble {
     position:relative;
     @include border-radius(25px);
-    background:white;
+    background:rgba(255, 255, 255, 1);
     padding:30px;
     font-size:25px;
     color: $dark-color;
@@ -152,6 +153,71 @@ footer{
 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* --------------------------------------- */
+/* Intro Slides */
+/* --------------------------------------- */
+
+.margin-top-0{
+  margin-top:0px;
+}
+
+.intro-slide {
+  
+  z-index:999;
+
+  h2{
+    font-family: $primary_font;
+    color:$primary-color;
+    font-weight:600;
+    font-size:30px;
+  }
+
+  .question {
+
+    font-weight:600;
+    font-size:30px;
+
+  }
+
+  .btn {
+
+    font-size:30px;
+    margin-top:-15px;
+    margin-bottom:5px;
+  }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
