--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -7,13 +7,12 @@ html, body {
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: auto;
+  height: 100%;
   font-weight: 300;
   overflow: hidden;
 }
 
 body {
-  background: orange;
   background: url("../assets/bg.jpg") no-repeat center center fixed;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -50,6 +49,7 @@ footer {
 .main_container {
   margin: 0 auto;
   width: 65%;
+  height: 100%;
 }
 
 .conversation input {
@@ -177,6 +177,31 @@ footer {
   font-size: 20px;
 }
 .intro-slide .btn {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+/* --------------------------------------- */
+/* Intro Slides */
+/* --------------------------------------- */
+.graph-item {
+  z-index: 999;
+}
+.graph-item .title {
+  font-family: "Open Sans Condensed", sans-serif;
+  color: #ff8900;
+  font-weight: 600;
+  font-size: 30px;
+}
+.graph-item .question {
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.graph-item p {
+  font-size: 20px;
+}
+.graph-item .btn {
   font-weight: 600;
   font-size: 20px;
 }
