--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -215,12 +215,9 @@ footer{
   margin-top:0px;
 }
 
-.intro-slide {
+.intro-slide,.copy-item {
   
   z-index:999;
-
-
-
 
   .title{
     font-family: $primary_font;
