--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -27,7 +27,7 @@ html,body {
 }
 
 body{
-  //background:orange;
+  background:orange;
   background: url("../assets/bg.jpg") no-repeat center center fixed;
   @include background-size(cover);
   color: $primary-color;
