--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -3,12 +3,11 @@
 /* Styles */
 /* --------------------------------------- */
 html, body {
-  font-family: "Open Sans Condensed", sans-serif;
+  font-family: "Quicksand", sans-serif;
   padding: 0px;
   margin: 0px;
   width: 100%;
   height: 100%;
-  font-weight: 300;
   overflow: hidden;
 }
 
@@ -20,6 +19,7 @@ body {
   -webkit-background-size: cover;
   background-size: cover;
   color: #ff8900;
+  font-size: 25px;
 }
 
 footer {
@@ -55,7 +55,7 @@ footer {
 
 .conversation input {
   padding: 30px 20px;
-  font-size: 40px;
+  font-size: 1.8vw;
   font-weight: 300;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -92,7 +92,6 @@ footer {
   border-radius: 25px;
   background: white;
   padding: 30px;
-  font-size: 25px;
   color: #404040;
 }
 .content-info.speechbubble:after {
@@ -164,10 +163,23 @@ footer {
   z-index: 999;
 }
 .slide .title {
-  font-family: "Open Sans Condensed", sans-serif;
-  color: #ff8900;
+  font-family: "Quicksand", sans-serif;
+  color: #77C0B2;
   font-weight: 600;
   font-size: 30px;
+}
+.slide .title .circle {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #fff;
+  line-height: 40px;
+  text-align: center;
+  background: #404040;
+  display: inline-block;
+}
+.slide .title .title-copy {
+  display: inline-block;
 }
 .slide .question {
   font-weight: 600;
@@ -186,6 +198,55 @@ footer {
 }
 .help-list-questions a {
   color: #404040;
+}
+
+.amcharts-chart-div text, .amcharts-legend-div text {
+  font-family: "Quicksand", sans-serif;
+}
+.amcharts-chart-div a, .amcharts-legend-div a {
+  display: none !important;
+}
+
+/* --------------------------------------- */
+/*  Tweet */
+/* --------------------------------------- */
+.tweet {
+  margin-top: 50px;
+}
+.tweet .tweet__user {
+  margin-bottom: 5px;
+}
+.tweet .tweet__user .tw-icon {
+  float: right;
+  color: #1ca2f3;
+  margin-top: 30px;
+}
+.tweet .tweet__user .name {
+  font-weight: bold;
+  font-size: 35px;
+}
+.tweet .tweet__user .date {
+  font-size: 25px;
+}
+.tweet .tweet__main {
+  margin-top: 10px;
+  font-size: 30px;
+}
+
+/* --------------------------------------- */
+/*  Photo */
+/* --------------------------------------- */
+.photo {
+  margin-top: 50px;
+}
+.photo .photo__main {
+  font-size: 30px;
+}
+.photo .photo__main .title {
+  padding: 3px 8px;
+  display: inline-block;
+  background: #404040;
+  color: white;
 }
 
 /* --------------------------------------- */
