--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -277,17 +277,33 @@ footer{
 
 
 
-.help-list-questions{
+
+
+/* --------------------------------------- */
+/*  Help */
+/* --------------------------------------- */
+
+
+.help {
+
+  font-size:2.2vh;
+
+  .help-list-questions{
+    
+    li {
+      margin-top:2px;
+    }
+
+    a {
+      color:$dark-color;
+    }
+
+  }
+
   
-  li {
-    margin-top:2px;
-  }
-
-  a {
-    color:$dark-color;
-  }
-
 }
+
+
 
 
 
@@ -326,16 +342,16 @@ footer{
     .tw-icon {
       float:right;
       color: $twitter-color;
-      margin-top:30px;
+      margin-top:20px;
     }
 
     .name {
       font-weight:bold;
-      font-size:35px;
+      font-size:3vh;
     }
 
     .date {
-      font-size:25px;
+      font-size:2.5vh;
     }
 
   }
@@ -343,7 +359,7 @@ footer{
   .tweet__main {
 
     margin-top:10px;
-    font-size:30px;
+    font-size:3.2vh;
 
   }
 
@@ -365,13 +381,14 @@ footer{
 
   .photo__main {
 
-    font-size:30px;
+    font-size:3vh;
 
     .title {
       padding:3px 8px;
       display:inline-block;
       background: $dark-color;
       color:white;
+      font-size:3.5vh;
 
       span {
         //padding-left: 3%;
