--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -59,6 +59,8 @@ footer{
   //background: green;
   width:200px;
   height:200px;
+  @include transform(scale(1));
+
 
   .robot {
     position:absolute;
@@ -67,6 +69,7 @@ footer{
     height:150px;
     top:25px;
     left:25px;
+
   }
 }
 
@@ -113,7 +116,7 @@ footer{
 
     input {
       background-color: rgba(255, 255, 255, 0.1);
-      color:$primary-color;
+      color:white;
     }
 
   }
