--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -214,7 +214,7 @@ footer {
   font-size: 2.2vh;
 }
 .help .help-list-questions li {
-  margin-top: 2px;
+  margin-top: 5px;
 }
 .help .help-list-questions a {
   color: #404040;
@@ -364,39 +364,17 @@ footer {
 }
 
 /* --------------------------------------- */
-/*  CES_EVENTS */
+/*  STATS */
 /* --------------------------------------- */
-.events .item {
-  margin: 50px 0px;
-}
-.events .item .when {
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  padding: 5px 15px;
-  color: white;
-  font-weight: bold;
-  font-size: 3vw;
+.stats span {
   text-align: center;
-  margin-bottom: 20px;
-}
-.events .item .when.now {
-  background-color: #c6e17d;
-}
-.events .item .when.next {
-  background-color: #abdbf3;
-}
-.events .item .generic, .events .item .keynote, .events .item .location, .events .item .time {
-  margin: 5px 0px 0px 0px;
-}
-.events .item .keynote {
+  font-size: 30vh;
   font-weight: bold;
-  font-size: 2vw;
-  border-top: 1px solid #404040;
-  padding-top: 10px;
-}
-.events .item .time {
-  padding-bottom: 10px;
+  color: #77C0B2;
+  padding: 0 5%;
+  -moz-border-radius: 10%;
+  -webkit-border-radius: 10%;
+  border-radius: 10%;
 }
 
 /* --------------------------------------- */
