--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -33,8 +33,8 @@ html,body {
 }
 
 body{
-  background:orange;
-  background: url("../assets/cesbot_bg.jpg") no-repeat center center fixed;
+  //background:orange;
+  //background: url("http://www.buzzradar.com/ces2018/kioskapp/assets/cesbot_bg.jpg") no-repeat center center fixed;
   @include background-size(cover);
   color: $primary-color;
   font-size: $par-size;
@@ -129,7 +129,7 @@ footer{
     }
 
     input {
-      background-color: rgba(255, 255, 255, 0);
+      background-color: rgba(255, 255, 255, 0.1);
       color:white;
       text-align:right;
     }
