--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -241,7 +241,8 @@ footer{
 
     .ask-me{
       position:absolute;
-      top:-38px;
+      height:40px;
+      top:-40px;
       right:0px;
       font-size:20px;
       padding:5px 20px !important;
