Fixing Big Number css issue

--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -364,7 +364,7 @@ footer {
 /* --------------------------------------- */
 .stats span {
   text-align: center;
-  font-size: 30vh;
+  font-size: 15vw;
   font-weight: bold;
   color: #77C0B2;
   padding: 0 5%;
