--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -555,7 +555,7 @@ footer{
 
   span {
     text-align:center;
-    font-size:30vh;
+    font-size:15vw;
     font-weight:bold;
     //background-color: $secondary-color;
     color: $secondary-color;
