--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -363,14 +363,12 @@ footer {
 /*  STATS */
 /* --------------------------------------- */
 .stats span {
+  width: auto;
   text-align: center;
-  font-size: 15vw;
+  font-size: 11vw;
   font-weight: bold;
   color: #77C0B2;
   padding: 0 5%;
-  -moz-border-radius: 10%;
-  -webkit-border-radius: 10%;
-  border-radius: 10%;
 }
 
 /* --------------------------------------- */
