Events layout ready

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -529,6 +529,7 @@ footer{
       font-size:2vw;
       border-bottom:1px solid $dark-color;
       padding-top:10px;
+      margin-bottom:15px;
     }
     .location{
       @extend .generic;
