--- a/.tmp/styles/styles.css
+++ b/.tmp/styles/styles.css
@@ -356,6 +356,7 @@ footer {
   font-size: 2vw;
   border-bottom: 1px solid #404040;
   padding-top: 10px;
+  margin-bottom: 15px;
 }
 .keynotes .item .time {
   padding-bottom: 10px;
